
5.2a2 -> 5.2a3:
    - jbj: lua: disable mkdtemp(3) bindings, no solaris portability atm.
    - jbj: lua: bind mkdtemp(3) in lposix.c
    - jbj: macros: add %{mkdtemp:...} primitive (consistent leading whitespace too).
    - jbj: devtool: provision a fedora host sufficiently to build from cvs.
    - jbj: add cudf-tests example packaging.
    - jbj: include tests/*.src.rpm, exclude tests/ref/CVS/*, with "make dist".
    - proyvind: lua: explicitly link against libexpat as assumption on implicit
	linking cannot be guaranteed.
    - proyvind: add --with-extra-path-macros configure option that adds
	 additional macro file paths without overriding existing defaults.
    - proyvind: add --with-vendor configure option to define RPM_VENDOR_*.
    - proyvind: Mandriva: make loglevel for dependency loop detection
	overridable, debug-level by default. (loop-detection-optional-loglevel)
    - jbj: fix: __OpenBSD__ insque(3) needs rpmsq rock initialized.
    - jbj: add #ifdef's needed to compile on __OpenBSD__.
    - proyvind: Mandriva: make directory & symlink dependencies optional with
	%{_check_symlink_deps} & %{_check_dirname_deps}. (optional-dirname-and-symlink-deps)
    - proyvind: Mandriva: prefer file extension for detecting file compression.
	(extension-based-compression-detection)
    - proyvind: Mandriva: disable buildrequires checking for building src.rpms.
	(no-deps-on-building-srpms)
    - proyvind: Mandriva: disable preservation of file ownership for source rpms.
	(no-owner-group-on-srpm-install)
    - rpm.org: Add posix.mkstemp() to Lua posix lib.
    - jbj: fix: apply _dependency_whiteout to erased relations too.
    - jbj: lua: display rudimentary info about lua with --showrc.
    - jbj: lua: preload "crypto" in rpmlua.c.
    - jbj: lua: lom.lua has requires("lxp"), so preload "lxp" in rpmlua.c.
    - jbj: WRlua: preserve forward linkage by avoiding vmefail/get_date.
    - jbj: lua: add virgin luasocket-2.0.2 lua bindings (unused atm).